// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`has clientEvents 1`] = `
[
  {
    "attributes": {
      "code": "149",
      "description": "NOT ASSOCIATE WITH ANYONE YOU KNOW TO HAVE A FELONY RECORD",
    },
    "eventDate": 2022-12-20T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2022-10-20T00:00:00.000Z,
    "metricId": "treatment_completion",
  },
  {
    "attributes": {
      "code": null,
      "description": "PAROLE REINSTATED",
    },
    "eventDate": 2022-10-10T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "148",
      "description": "COMPLY WITH ALCOHOL AND DRUG TESTING ORDERED BY FIELD AGENT",
    },
    "eventDate": 2022-09-29T00:00:00.000Z,
    "metricId": "violations",
  },
]
`;

exports[`has clientEventsWithSupervisionEvents 1`] = `
[
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2021-04-24T00:00:00.000Z,
    "metricId": "absconsion_date",
  },
  {
    "attributes": {
      "code": "149",
      "description": "NOT ASSOCIATE WITH ANYONE YOU KNOW TO HAVE A FELONY RECORD",
    },
    "eventDate": 2020-12-13T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2020-10-13T00:00:00.000Z,
    "metricId": "treatment_completion",
  },
  {
    "attributes": {
      "code": null,
      "description": "PAROLE REINSTATED",
    },
    "eventDate": 2020-10-03T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "148",
      "description": "COMPLY WITH ALCOHOL AND DRUG TESTING ORDERED BY FIELD AGENT",
    },
    "eventDate": 2020-09-22T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2019-01-08T00:00:00.000Z,
    "metricId": "assigned_to_officer_Harris",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2019-01-08T00:00:00.000Z,
    "metricId": "COMMUNITY_CONFINEMENT_start_date",
  },
]
`;

exports[`has clientEventsWithSupervisionEvents even if supervisionDetails is undefined 1`] = `
[
  {
    "attributes": {
      "code": "149",
      "description": "NOT ASSOCIATE WITH ANYONE YOU KNOW TO HAVE A FELONY RECORD",
    },
    "eventDate": 2022-12-20T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2022-10-20T00:00:00.000Z,
    "metricId": "treatment_completion",
  },
  {
    "attributes": {
      "code": null,
      "description": "PAROLE REINSTATED",
    },
    "eventDate": 2022-10-10T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "148",
      "description": "COMPLY WITH ALCOHOL AND DRUG TESTING ORDERED BY FIELD AGENT",
    },
    "eventDate": 2022-09-29T00:00:00.000Z,
    "metricId": "violations",
  },
]
`;

exports[`has clientInfo 1`] = `
{
  "birthdate": 1971-03-15T00:00:00.000Z,
  "clientId": "985771",
  "displayName": "Kevin Baker",
  "fullName": {
    "givenNames": "Kevin",
    "surname": "Baker",
  },
  "gender": "MALE",
  "pseudonymizedClientId": "hashed-985771",
  "raceOrEthnicity": "BLACK",
}
`;

exports[`has supervisionDetails if metric event date matches outcomeDate 1`] = `
{
  "officerAssignmentDate": 2019-01-08T00:00:00.000Z,
  "supervisionStartDate": 2019-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`with client data already hydrated > has clientEvents 1`] = `
[
  {
    "attributes": {
      "code": "149",
      "description": "NOT ASSOCIATE WITH ANYONE YOU KNOW TO HAVE A FELONY RECORD",
    },
    "eventDate": 2022-12-20T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2022-10-20T00:00:00.000Z,
    "metricId": "treatment_completion",
  },
  {
    "attributes": {
      "code": null,
      "description": "PAROLE REINSTATED",
    },
    "eventDate": 2022-10-10T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "148",
      "description": "COMPLY WITH ALCOHOL AND DRUG TESTING ORDERED BY FIELD AGENT",
    },
    "eventDate": 2022-09-29T00:00:00.000Z,
    "metricId": "violations",
  },
]
`;

exports[`with client data already hydrated > has clientInfo 1`] = `
{
  "birthdate": 1971-03-15T00:00:00.000Z,
  "clientId": "985771",
  "displayName": "Kevin Baker",
  "fullName": {
    "givenNames": "Kevin",
    "surname": "Baker",
  },
  "gender": "MALE",
  "pseudonymizedClientId": "hashed-985771",
  "raceOrEthnicity": "BLACK",
}
`;
